add DirectXTK as git submodule
 Changes to be committed:
	modified:   .gitmodules
	new file:   External/DirectXTK

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "External/DirectXTex"]
 	path = External/DirectXTex
 	url = https://github.com/Tana0910/DirectXTex.git
+[submodule "External/DirectXTK"]
+	path = External/DirectXTK
+	url = https://github.com/Tana0910/DirectXTK.git
